# mpu6050

./: CMakeLists.txt  ReadMe.txt  main.cpp  print_eigen_matrix.gdb  ~
Wifi/: Wifi.cpp  Wifi.hpp
inc/: MPU6050.hpp  OrientationFilter.hpp  TrkUtility.hpp  filterEKF.hpp  filterUKF.hpp  led.hpp
src/: OrientationFilter.cpp  filterEKF.cpp  filterUKF.cpp  led.cpp
tools/: QuatViz.py
